# wayland-ivi-extension

./: README
debian/: README  changelog  control  copyright  ilm-examples.install  ilm-examples.lintian-overrides  libilm-dev.install  libilm2.install  libilm2.lintian-overrides  libivi-application-protocol-dev.install  libivi-application-protocol1.install  libivi-application-protocol1.lintian-overrides  weston-ivi-plugins.install
ivi-id-agent-modules/ivi-id-agent/: CMakeLists.txt
ivi-id-agent-modules/ivi-id-agent/src/: ivi-id-agent.c
ivi-input-modules/ivi-input-controller/: CMakeLists.txt
ivi-input-modules/ivi-input-controller/src/: ivi-input-controller.c
ivi-layermanagement-api/ilmCommon/include/: ilm_common.h  ilm_types.h
ivi-layermanagement-api/ilmCommon/src/: ilm_common.c
ivi-layermanagement-api/ilmControl/include/: ilm_control.h  ilm_control_platform.h
ivi-layermanagement-api/ilmControl/src/: ilm_control_wayland_platform.c
ivi-layermanagement-api/ilmInput/include/: ilm_input.h
ivi-layermanagement-api/ilmInput/src/: ilm_input.c
ivi-layermanagement-examples/: CMakeLists.txt
ivi-layermanagement-examples/LayerManagerControl/src/: input_commands.cpp
ivi-layermanagement-examples/layer-add-surfaces/src/: layer-add-surfaces.c
ivi-layermanagement-examples/simple-weston-client/: CMakeLists.txt
ivi-layermanagement-examples/simple-weston-client/src/: simple-weston-client.c
ivi-layermanagement-examples/simple-weston-signal/: CMakeLists.txt
ivi-layermanagement-examples/simple-weston-signal/src/: simple-weston-signal.c
protocol/: CMakeLists.txt  ivi-input.xml  ivi-wm.xml  weston-simple.xml
weston-ivi-shell/: CMakeLists.txt
weston-ivi-shell/src/: ivi-controller.c  ivi-controller.h
